--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - checkout
       - run:
           name: update-npm
-          command: 'sudo npm install -g npm@latest'
+          command: 'sudo npm install -g npm@latest ionic@latest cordova'
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}
       - run:
