Installing them separately

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,9 @@ jobs:
       - checkout
       - run:
           name: update-npm
-          command: 'sudo npm install -g npm@latest ionic@latest cordova'
+          command: |
+            sudo npm install -g npm@latest
+            sudo npm install -gionic@latest cordova
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}
       - run:
