--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,8 @@ jobs:
     steps:
       - checkout
       - run:
-          name: update-npm
+          name: Install Ionic & Cordova
           command: |
-            sudo npm install -g npm@latest
             sudo npm install -g ionic@latest cordova
       - restore_cache:
           key: dependency-cache-{{ checksum "package.json" }}
