--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: ~/gonevis-mobile
     docker:
-      - image: circleci/node:7
+      - image: circleci/node:7-browsers
     steps:
       - checkout
       - run:
