--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "@ionic-native/camera": "^3.14.0",
     "@ionic-native/core": "3.12.1",
     "@ionic-native/google-maps": "3.12.1",
+    "@ionic-native/photo-viewer": "^4.4.2",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.1",
     "@ngx-translate/core": "6.0.1",
     "@ngx-translate/http-loader": "0.0.3",
+    "com-sarriaroman-photoviewer": "^1.1.11",
     "cordova-android": "^6.3.0",
     "cordova-browser": "^4.1.0",
     "cordova-plugin-add-swift-support": "^1.7.0",
@@ -83,7 +85,8 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-whitelist": {},
       "ionic-plugin-keyboard": {},
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "com-sarriaroman-photoviewer": {}
     },
     "platforms": [
       "android",
