--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic-native/camera": "^3.14.0",
     "@ionic-native/core": "3.12.1",
     "@ionic-native/google-maps": "3.12.1",
+    "@ionic-native/local-notifications": "^4.4.2",
     "@ionic-native/photo-viewer": "^4.4.2",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
@@ -40,6 +41,7 @@
     "cordova-android": "^6.4.0",
     "cordova-browser": "^4.1.0",
     "cordova-plugin-add-swift-support": "^1.7.0",
+    "cordova-plugin-app-event": "^1.2.1",
     "cordova-plugin-camera": "^2.4.1",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-console": "^1.1.0",
@@ -47,6 +49,7 @@
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-statusbar": "^2.3.0",
     "cordova-plugin-whitelist": "^1.3.3",
+    "de.appplant.cordova.plugin.local-notification": "^0.8.5",
     "ionic-angular": "3.6.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
@@ -86,7 +89,9 @@
       "cordova-plugin-whitelist": {},
       "ionic-plugin-keyboard": {},
       "cordova-plugin-camera": {},
-      "com-sarriaroman-photoviewer": {}
+      "com-sarriaroman-photoviewer": {},
+      "cordova-plugin-app-event": {},
+      "de.appplant.cordova.plugin.local-notification": {}
     },
     "platforms": [
       "android",
