--- a/package.json
+++ b/package.json
@@ -27,29 +27,27 @@
     "@angular/http": "4.1.3",
     "@angular/platform-browser": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
-    "@ionic-native/camera": "^3.14.0",
-    "@ionic-native/core": "3.12.1",
-    "@ionic-native/google-maps": "3.12.1",
-    "@ionic-native/local-notifications": "^4.4.2",
+    "@ionic-native/camera": "^4.4.2",
+    "@ionic-native/core": "^4.4.2",
+    "@ionic-native/google-maps": "^4.4.2",
     "@ionic-native/photo-viewer": "^4.4.2",
-    "@ionic-native/splash-screen": "3.12.1",
-    "@ionic-native/status-bar": "3.12.1",
+    "@ionic-native/splash-screen": "^4.4.2",
+    "@ionic-native/status-bar": "^4.4.2",
     "@ionic/storage": "2.0.1",
     "@ngx-translate/core": "6.0.1",
     "@ngx-translate/http-loader": "0.0.3",
+    "ajv-keywords": "^2.1.1",
     "com-sarriaroman-photoviewer": "^1.1.11",
     "cordova-android": "^6.4.0",
     "cordova-browser": "^4.1.0",
     "cordova-plugin-add-swift-support": "^1.7.0",
     "cordova-plugin-app-event": "^1.2.1",
-    "cordova-plugin-camera": "^2.4.1",
-    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-camera": "^3.0.0",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-statusbar": "^2.3.0",
     "cordova-plugin-whitelist": "^1.3.3",
-    "de.appplant.cordova.plugin.local-notification": "^0.8.5",
     "ionic-angular": "3.6.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
@@ -59,8 +57,8 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "2.1.4",
-    "@types/jasmine": "^2.6.0",
-    "@types/node": "^8.0.31",
+    "@types/jasmine": "^2.8.2",
+    "@types/node": "^8.0.53",
     "angular2-template-loader": "^0.6.2",
     "html-loader": "^0.5.1",
     "istanbul-instrumenter-loader": "^3.0.0",
@@ -72,9 +70,9 @@
     "karma-jasmine": "^1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.4",
+    "karma-webpack": "^2.0.6",
     "null-loader": "^0.1.1",
-    "protractor": "^5.1.2",
+    "protractor": "^5.2.0",
     "ts-loader": "^2.3.7",
     "ts-node": "^3.3.0",
     "typescript": "2.3.4"
@@ -88,10 +86,9 @@
       "cordova-plugin-statusbar": {},
       "cordova-plugin-whitelist": {},
       "ionic-plugin-keyboard": {},
-      "cordova-plugin-camera": {},
       "com-sarriaroman-photoviewer": {},
       "cordova-plugin-app-event": {},
-      "de.appplant.cordova.plugin.local-notification": {}
+      "cordova-plugin-camera": {}
     },
     "platforms": [
       "android",
