--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@ionic/storage": "2.0.1",
     "@ngx-translate/core": "6.0.1",
     "@ngx-translate/http-loader": "0.0.3",
+    "ajv": "^5.5.2",
     "ajv-keywords": "^2.1.1",
     "com-sarriaroman-photoviewer": "^1.1.11",
     "cordova-android": "^6.4.0",
