--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@angular/http": "4.1.3",
     "@angular/platform-browser": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
-    "@ionic-native/camera": "^4.4.2",
-    "@ionic-native/core": "^4.4.2",
-    "@ionic-native/google-maps": "^4.4.2",
-    "@ionic-native/photo-viewer": "^4.4.2",
-    "@ionic-native/splash-screen": "^4.4.2",
-    "@ionic-native/status-bar": "^4.4.2",
+    "@ionic-native/camera": "^4.5.2",
+    "@ionic-native/core": "^4.5.2",
+    "@ionic-native/google-maps": "^4.5.2",
+    "@ionic-native/in-app-browser": "^4.5.2",
+    "@ionic-native/keyboard": "^4.5.2",
+    "@ionic-native/photo-viewer": "^4.5.2",
+    "@ionic-native/splash-screen": "^4.5.2",
+    "@ionic-native/status-bar": "^4.5.2",
     "@ionic/storage": "2.0.1",
     "@ngx-translate/core": "6.0.1",
     "@ngx-translate/http-loader": "0.0.3",
@@ -41,13 +43,14 @@
     "com-sarriaroman-photoviewer": "^1.1.11",
     "cordova-android": "^6.4.0",
     "cordova-browser": "^4.1.0",
-    "cordova-plugin-add-swift-support": "^1.7.0",
+    "cordova-plugin-add-swift-support": "^1.7.1",
     "cordova-plugin-app-event": "^1.2.1",
     "cordova-plugin-camera": "^3.0.0",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-inappbrowser": "^1.7.2",
     "cordova-plugin-splashscreen": "^4.1.0",
-    "cordova-plugin-statusbar": "^2.3.0",
+    "cordova-plugin-statusbar": "^2.4.1",
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "^3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
@@ -58,22 +61,22 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "2.1.4",
-    "@types/jasmine": "^2.8.2",
-    "@types/node": "^8.0.53",
+    "@types/jasmine": "^2.8.4",
+    "@types/node": "^8.5.9",
     "angular2-template-loader": "^0.6.2",
-    "html-loader": "^0.5.1",
+    "html-loader": "^0.5.5",
     "istanbul-instrumenter-loader": "^3.0.0",
-    "jasmine": "^2.8.0",
+    "jasmine": "^2.9.0",
     "jasmine-spec-reporter": "^4.2.1",
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.3.0",
-    "karma-jasmine": "^1.1.0",
+    "karma-coverage-istanbul-reporter": "^1.3.3",
+    "karma-jasmine": "^1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.6",
+    "karma-webpack": "^2.0.9",
     "null-loader": "^0.1.1",
-    "protractor": "^5.2.0",
+    "protractor": "^5.2.2",
     "ts-loader": "^2.3.7",
     "ts-node": "^3.3.0",
     "typescript": "2.3.4"
@@ -89,7 +92,8 @@
       "ionic-plugin-keyboard": {},
       "com-sarriaroman-photoviewer": {},
       "cordova-plugin-app-event": {},
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "android",
