--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic-native/camera": "^4.5.3",
     "@ionic-native/core": "^4.5.3",
     "@ionic-native/google-maps": "^4.5.3",
+    "@ionic-native/native-page-transitions": "^4.5.3",
     "@ionic-native/photo-viewer": "^4.5.3",
     "@ionic-native/splash-screen": "^4.5.3",
     "@ionic-native/status-bar": "^4.5.3",
@@ -39,8 +40,10 @@
     "ajv": "^5.5.2",
     "ajv-keywords": "^2.1.1",
     "com-sarriaroman-photoviewer": "^1.1.11",
+    "com.telerik.plugins.nativepagetransitions": "^0.6.5",
     "cordova-android": "^6.4.0",
-    "cordova-browser": "^4.1.0",
+    "cordova-browser": "^5.0.3",
+    "cordova-ios": "4.5.4",
     "cordova-plugin-add-swift-support": "^1.7.1",
     "cordova-plugin-app-event": "^1.2.1",
     "cordova-plugin-camera": "^3.0.0",
@@ -89,11 +92,13 @@
       "ionic-plugin-keyboard": {},
       "com-sarriaroman-photoviewer": {},
       "cordova-plugin-app-event": {},
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "com.telerik.plugins.nativepagetransitions": {}
     },
     "platforms": [
       "android",
-      "browser"
+      "browser",
+      "ios"
     ]
   }
 }
